--- a/main.ipynb
+++ b/main.ipynb
@@ -2,20 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import FunctionTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.experimental import enable_iterative_imputer  # Enable the iterative imputer\n",
+    "from sklearn.impute import IterativeImputer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_ds = pd.read_csv(\"train.csv\")\n"
+    "df = pd.read_csv(\"train.csv\")\n",
+    "df_test = pd.read_csv(\"test.csv\")\n"
    ]
   },
   {
@@ -135,18 +149,18 @@
     }
    ],
    "source": [
-    "train_ds.head(3)"
+    "df.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method DataFrame.info of             id          brand                     model  model_year  milage  \\\n",
+       "<bound method NDFrame.tail of             id          brand                     model  model_year  milage  \\\n",
        "0            0           MINI             Cooper S Base        2007  213000   \n",
        "1            1        Lincoln                     LS V8        2002  143250   \n",
        "2            2      Chevrolet         Silverado 2500 LT        2002  136731   \n",
@@ -201,14 +215,222 @@
        "[188533 rows x 13 columns]>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_ds.info"
+    "df.tail"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'brand', 'model', 'model_year', 'milage', 'fuel_type', 'engine',\n",
+       "       'transmission', 'ext_col', 'int_col', 'accident', 'clean_title',\n",
+       "       'price'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Training Dataset has 188533 rows and 13 columns.\n",
+      "The Training Dataset has 125690 rows and 12 columns.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Check the shape of data\n",
+    "print(f'The Training Dataset has {df.shape[0]} rows and {df.shape[1]} columns.')\n",
+    "print(f'The Training Dataset has {df_test.shape[0]} rows and {df_test.shape[1]} columns.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 188533 entries, 0 to 188532\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column        Non-Null Count   Dtype \n",
+      "---  ------        --------------   ----- \n",
+      " 0   id            188533 non-null  int64 \n",
+      " 1   brand         188533 non-null  object\n",
+      " 2   model         188533 non-null  object\n",
+      " 3   model_year    188533 non-null  int64 \n",
+      " 4   milage        188533 non-null  int64 \n",
+      " 5   fuel_type     183450 non-null  object\n",
+      " 6   engine        188533 non-null  object\n",
+      " 7   transmission  188533 non-null  object\n",
+      " 8   ext_col       188533 non-null  object\n",
+      " 9   int_col       188533 non-null  object\n",
+      " 10  accident      186081 non-null  object\n",
+      " 11  clean_title   167114 non-null  object\n",
+      " 12  price         188533 non-null  int64 \n",
+      "dtypes: int64(4), object(9)\n",
+      "memory usage: 18.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>milage</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>188533.000000</td>\n",
+       "      <td>188533.000000</td>\n",
+       "      <td>188533.000000</td>\n",
+       "      <td>1.885330e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>94266.000000</td>\n",
+       "      <td>2015.829998</td>\n",
+       "      <td>65705.295174</td>\n",
+       "      <td>4.387802e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>54424.933488</td>\n",
+       "      <td>5.660967</td>\n",
+       "      <td>49798.158076</td>\n",
+       "      <td>7.881952e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1974.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>2.000000e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>47133.000000</td>\n",
+       "      <td>2013.000000</td>\n",
+       "      <td>24115.000000</td>\n",
+       "      <td>1.700000e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>94266.000000</td>\n",
+       "      <td>2017.000000</td>\n",
+       "      <td>57785.000000</td>\n",
+       "      <td>3.082500e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>141399.000000</td>\n",
+       "      <td>2020.000000</td>\n",
+       "      <td>95400.000000</td>\n",
+       "      <td>4.990000e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>188532.000000</td>\n",
+       "      <td>2024.000000</td>\n",
+       "      <td>405000.000000</td>\n",
+       "      <td>2.954083e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  id     model_year         milage         price\n",
+       "count  188533.000000  188533.000000  188533.000000  1.885330e+05\n",
+       "mean    94266.000000    2015.829998   65705.295174  4.387802e+04\n",
+       "std     54424.933488       5.660967   49798.158076  7.881952e+04\n",
+       "min         0.000000    1974.000000     100.000000  2.000000e+03\n",
+       "25%     47133.000000    2013.000000   24115.000000  1.700000e+04\n",
+       "50%     94266.000000    2017.000000   57785.000000  3.082500e+04\n",
+       "75%    141399.000000    2020.000000   95400.000000  4.990000e+04\n",
+       "max    188532.000000    2024.000000  405000.000000  2.954083e+06"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
